--- a/Checkr/Views/Home/Index.cshtml
+++ b/Checkr/Views/Home/Index.cshtml
@@ -2,10 +2,14 @@
     ViewData["Title"] = "Home Page";
 }
 
-<h1 class="text-center mt-5">Checkr</h1>
-
-<hr>
-
-<p class="lead text-center">The ultimate project management application.</>
-
-<p class="text-sm-end fw-lighter">Not by frontend engineers.</p>
+<div class="p-5 container mt-5 bg-purple-custom">
+    <div class="row justify-content-center text-center">
+        <div class="col-md-12">
+            <h1 class="display-1 mt-5 mb-5 fw-bolder text-white">Checkr</h1>
+            <hr>
+            <p class="h1 fw-light mt-5">The ultimate project management application.</p>
+            <p class="fw-lighter">Tailored for individual & team use</p>
+            <a class="btn btn-dark mt-5 mb-5" asp-controller="Boards" asp-action="List">Boards <i class="bi bi-arrow-right"></i></a>
+        </div>
+    </div>
+</div>
