--- a/Checkr/Views/Cards/Details.cshtml
+++ b/Checkr/Views/Cards/Details.cshtml
@@ -50,9 +50,16 @@
         </div>
         <div class="w-100 mt-3">
             <span class="badge rounded-pill bg-dark text-white">@Model.ToDoItems.Count(t => t.IsCompleted)/@Model.ToDoItems.Count</span>
-            @foreach (var toDoItem in Model.ToDoItems)
+            @if (Model.ToDoItems.Count > 5)
             {
-                @await Html.PartialAsync("/Views/ToDoItems/Details.cshtml", toDoItem)
+                <a asp-controller="Cards" asp-action="Checklist" asp-route-id="@Model.Id" class="btn btn-dark d-block mt-2">Checklist</a>
+            }
+            else
+            {
+                foreach (var toDoItem in Model.ToDoItems)
+                {
+                    @await Html.PartialAsync("/Views/ToDoItems/Details.cshtml", toDoItem)
+                }
             }
         </div>
     </div>
