--- a/Checkr/Views/ToDoItems/Details.cshtml
+++ b/Checkr/Views/ToDoItems/Details.cshtml
@@ -12,7 +12,7 @@
                 <h5 class="card-title">@Model.Content</h5>
             }
         </div>
-        <div class="dropdown">
+        <div class="dropdown mx-3">
             <button class="btn btn-sm btn-outline-light dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
                 <i class="bi bi-three-dots-vertical"></i>
             </button>
