--- a/Checkr/Views/Invitations/Index.cshtml
+++ b/Checkr/Views/Invitations/Index.cshtml
@@ -9,17 +9,7 @@
         {
             <div class="card mt-4 mb-4 shadow-sm bg-dark text-light">
                 <div class="card-body d-flex justify-content-between align-items-center">
-                    @if (invitation.Status == Status.Accepted)
-                    {
-                        <p class="lead">Joined <span class="fw-bold">@invitation.Board.Name</span> (Invited by <span class="fw-bold">@invitation.Sender.FirstName</span>)</p>
-                        <p class="text-secondary text-end">@invitation.CreatedAt.ToLocalTime()</p>
-
-                        <form asp-controller="Invitations" asp-action="RespondToInvitation" asp-route-id="@invitation.Id" method="post">
-                            @Html.AntiForgeryToken()
-                            <button type="submit" name="isAccepted" value="false" class="btn btn-danger">Delete</button>
-                        </form>
-                    }
-                    else if (invitation.Status == Status.Pending)
+                    @if (invitation.Status == Status.Pending)
                     {
                         <p class="lead"><span class="fw-bold">@invitation.Sender.FirstName</span> invited you to join <span class="fw-bold">@invitation.Board.Name</span>!</p>
                         <p class="text-secondary text-end">@invitation.CreatedAt.ToLocalTime()</p>
@@ -32,12 +22,19 @@
                     }
                     else
                     {
-                        <p class="lead">Rejected to join <span class="fw-bold">@invitation.Board.Name</span> (Invited by <span class="fw-bold">@invitation.Sender.FirstName</span>)</p>
+                        if (invitation.Status == Status.Accepted)
+                        {
+                            <p class="lead">Joined <span class="fw-bold">@invitation.Board.Name</span> (Invited by <span class="fw-bold">@invitation.Sender.FirstName</span>)</p>
+                        }
+                        else if (invitation.Status == Status.Declined)
+                        {
+                            <p class="lead">Rejected to join <span class="fw-bold">@invitation.Board.Name</span> (Invited by <span class="fw-bold">@invitation.Sender.FirstName</span>)</p>
+                        }
                         <p class="text-secondary text-end">@invitation.CreatedAt.ToLocalTime()</p>
 
-                        <form asp-controller="Invitations" asp-action="RespondToInvitation" asp-route-id="@invitation.Id" method="post">
+                        <form asp-controller="Invitations" asp-action="Delete" asp-route-id="@invitation.Id" method="post">
                             @Html.AntiForgeryToken()
-                            <button type="submit" name="isAccepted" value="false" class="btn btn-danger">Delete</button>
+                            <button type="submit" class="btn btn-danger">Delete</button>
                         </form>
                     }
                 </div>
